# data-extract-cli

./: .bmad_discovered_inputs.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .scanignore  AGENTS.md  CHANGELOG  CLAUDE.md  GEMINI.md  README.md  TRASH-FILES.md  alembic.ini  coverage.json  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  settings.json  settings.local.json  tmux-cli-instructions.md
.claude/agents/: mlops-engineer.md  prompt-engineer.md
.claude/commands/: commit.md
.claude/hooks/: PostToolUse  README.md  SessionStart  bash_grep_check.py  bash_hook.py  env_file_protection_hook.py  file_size_conditional_hook.py  format_python_hook.py  git_add_block_hook.py  git_checkout_safety_hook.py  git_commit_block_hook.py  grep_block_hook.py  markdown_info_hook.py  notification_hook.sh  posttask_subtask_flag.py  pretask_subtask_flag.py  rm_block_hook.py  test_all_hooks.py  test_hooks.py  user_prompt_grep_reminder.py
.claude/skills/: SKILL_INDEX.md  TRASH-FILES.md  package_skills.py  validate_skills.py
.github/workflows/: performance.yml  security.yml  test.yml  uat.yaml
.ui-home/: app.db
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: ui-ux-design-audit-2026-02-16.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
alembic/: env.py
alembic/versions/: 20260210_0001_create_ui_tables.py  20260210_0002_refactor_persistence_unification.py  20260214_0003_schema_persistence_hardening.py
build_scripts/: BUILD.md  README.md  build_orchestrator.py  build_windows.ps1  data_extract.spec  download_ocr_dependencies.py  installer.iss  runtime_hook_spacy.py  runtime_hook_tesseract.py  version.py
build_scripts/assets/: README.md
build_scripts/hooks/: hook-data_extract.py
config/normalize/: cleaning_rules.yaml
docs/: DOC_STATUS.md  QUICKSTART.md  TESTING-README.md  UI_RUNTIME_GUIDE.md  USER_GUIDE.md  UV_MIGRATION_SUMMARY.md  api-contracts-backend.md  api-contracts-ui.md  architecture-backend.md  architecture-refactoring-scan-security.md  architecture-ui.md  atdd-checklist-3.4.md  atdd-checklist-3.6.md  automation-guide.md  automation-summary-epic-4-prep.md  automation-summary-story-3.7.md  bmm-data-models.md  bmm-index.md  bmm-project-overview.md  bmm-test-infrastructure.md  bmm-workflow-status.yaml  ci-cd-pipeline.md  code-review-2025-11-18-claude-md.md  component-inventory-backend.md  component-inventory-ui.md  comprehensive-analysis-backend.md  comprehensive-analysis-ui.md  contribution-guide.md  csv-format-reference.md  data-models-backend.md  data-models-ui.md  deployment-guide.md  development-automation-strategy.md  development-guide-backend.md  development-guide-ui.md  development-operations-guide.md  epic-3-reference.md  epic-4-5-action-plan-2025-11-20.md  epic-4-integration-test-design.md  epic-4-value-proposition.md  (+40 more)
docs/.archive/: project-scan-report-2025-11-13T16-45-23.json
docs/.workflow-sections/: step-1-project_parts_metadata.md  step-1-project_structure.md  step-10-index.md  step-2-existing_documentation_inventory.md  step-2-user_provided_context.md  step-3-architecture_patterns.md  step-3-technology_stack.md  step-4-api_contracts-backend.md  step-4-api_contracts-ui.md  step-4-comprehensive_analysis-backend.md  step-4-comprehensive_analysis-ui.md  step-4-data_models-backend.md  step-4-data_models-ui.md  step-4-state_management_patterns-ui.md  step-4-ui_component_inventory-ui.md  step-5-critical_folders_summary.md  step-5-source_tree_analysis.md  step-6-contribution_guidelines.md  step-8-architecture_document.md  (+4 more)
examples/: docx_extractor_example.py  docx_with_logging.py  excel_extractor_example.py  formatter_examples.py  logging_example.py  minimal_extractor.py  minimal_processor.py  pdf_extractor_example.py  pptx_extractor_example.py  processor_pipeline_example.py  sample_input.json  simple_pipeline.py
quality-reports/: ci_repro_security_20260211_200019.json  ci_repro_security_20260211_200019.md  codex_repo_audit_20260211_195146.json  codex_repo_audit_20260211_195146.md  codex_repo_audit_20260211_200045.json  codex_repo_audit_20260211_200045.md  docs_audit_report_20260211_190611.json  docs_audit_report_20260211_190722.json  docs_audit_report_20260211_190923.json  docs_audit_report_20260211_191024.json  docs_audit_report_20260211_191038.json  docs_audit_report_20260211_192000.json  docs_audit_report_20260211_192043.json  docs_audit_report_20260211_192044.json  docs_audit_report_20260211_194646.json  docs_audit_report_20260211_194653.json  docs_audit_report_20260211_195129.json  docs_audit_report_20260211_195130.json  docs_audit_report_20260211_200029.json  docs_audit_report_20260211_200030.json  quality_report_20260211_141051.json  quality_report_20260211_141051.md  quality_report_20260211_142012.json  quality_report_20260211_142012.md  quality_report_20260211_142056.json  quality_report_20260211_142056.md  quality_report_20260211_144705.json  quality_report_20260211_144705.md  quality_report_20260211_145143.json  quality_report_20260211_145143.md  quality_report_20260211_150042.json  quality_report_20260211_150042.md  quality_report_20260211_183341.json  quality_report_20260211_183341.md
scripts/: PRUNING-SUMMARY.md  TRASH-FILES.md  add_test_ids.py  audit_dependencies.py  create_chart_fixture.py  create_performance_batch.py  fix_e402_errors.py  generate_story_template.py  generate_tests.py  init_claude_session.py  measure_progress_overhead.py  migrate_legacy_sessions.py  performance_catalog.py  profile_pipeline.py  profile_pipeline_worker.py  refresh_performance_baselines.py  run_api_load.py  run_performance_suite.py  run_quality_gates.py  run_refactor_gates.py  run_test_extractions.py  scan_security.py  setup_environment.py  smoke_test_semantic.py  tmux-cli  validate_installation.py  validate_performance.py
src/: README.md
tests/: README.md  conftest.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
(+734 files in other folders)
